--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,6 +29,12 @@
               <i class="fa-solid fa-clock"></i>
           </mat-list-item>
           <hr>
+          <mat-list-item (click)="naCeloten()">
+            Cel urnik
+            <br>
+            <i class="fa-solid fa-table-cells"></i>
+        </mat-list-item>
+        <hr>
           <mat-list-item  (click)="naLogin()">
               Login
               <br>
