--- a/src/app/urnik-drugih/urnik-drugih.component.html
+++ b/src/app/urnik-drugih/urnik-drugih.component.html
@@ -1,1 +1,77 @@
-<p>urnik-drugih works!</p>
+<br>
+<div style="text-align: center;">
+
+    <h4>Izberi profesorja ali razred</h4>
+    <mat-form-field appearance="fill">
+        <mat-label>Izberi profesorja ali razred</mat-label>
+        <mat-select (selectionChange)="najdi()" [(value)]="selected">
+        
+            <mat-optgroup [label]="'Profesorji'">
+              <mat-option *ngFor="let a of vsiProfesorji" value="{{a}}">{{a}}</mat-option>
+            </mat-optgroup>
+
+            <mat-optgroup [label]="'Razredi'">
+              <mat-option *ngFor="let a of vsiRazredi" value="{{a}}">{{a}}</mat-option>
+            </mat-optgroup>
+          
+        </mat-select>
+      </mat-form-field>
+
+      <br>
+
+      
+</div>
+
+<br>
+
+<div *ngIf="loaded">
+
+    <h3 style="text-align: center;" *ngIf="ura > 0 && day < 6 && day > 0" >{{selected}} ima <strong>{{urnik[dan][ura]}}</strong></h3>
+
+  <table *ngIf="loaded" style="width: 100%;">
+    <tr>
+        <th class="prvi"></th>
+        <th *ngFor="let dan of dni"
+        style="border: 1px solid #424242; color: white; background-color: #0D6EFD;"
+        >{{dan}}</th>
+        </tr>
+    <tr *ngFor="let i of [0,1,2,3,4,5,6]">
+
+            <td id="c" class="prvi">{{i+1}}</td>
+                
+            <td class="teden">
+                <a *ngIf="urnik['pon'][i] != 'Prosto' && urnik['pon'][i] != 'prosto' && dan != 'pon'">{{urnik['pon'][i]}}</a>
+                <a *ngIf="urnik['pon'][i] != 'Prosto' && urnik['pon'][i] != 'prosto' && dan == 'pon'">
+                    <strong>{{urnik['pon'][i]}}</strong>
+                </a>
+            </td>
+            <td class="teden">
+                <a *ngIf="urnik['tor'][i] != 'Prosto' && urnik['tor'][i] != 'prosto' && dan != 'tor'">{{urnik['tor'][i]}}</a>
+                <a *ngIf="urnik['tor'][i] != 'Prosto' && urnik['tor'][i] != 'prosto' && dan == 'tor'">
+                    <strong>{{urnik['tor'][i]}}</strong>
+                </a>
+            </td>
+            <td class="teden">
+                <a *ngIf="urnik['sre'][i] != 'Prosto' && urnik['sre'][i] != 'prosto' && dan != 'sre'">{{urnik['sre'][i]}}</a>
+                <a *ngIf="urnik['sre'][i] != 'Prosto' && urnik['sre'][i] != 'prosto' && dan == 'sre'">
+                    <strong>{{urnik['sre'][i]}}</strong>
+                </a>
+            </td>
+            <td class="teden">
+                <a *ngIf="urnik['cet'][i] != 'Prosto' && urnik['cet'][i] != 'prosto' && dan != 'cet'">{{urnik['cet'][i]}}</a>
+                <a *ngIf="urnik['cet'][i] != 'Prosto' && urnik['cet'][i] != 'prosto' && dan == 'cet'">
+                    <strong>{{urnik['cet'][i]}}</strong>
+                </a>
+            </td>
+            <td class="teden">
+                <a *ngIf="urnik['pet'][i] != 'Prosto' && urnik['pet'][i] != 'prosto' && dan != 'pet'">{{urnik['pet'][i]}}</a>
+                <a *ngIf="urnik['pet'][i] != 'Prosto' && urnik['pet'][i] != 'prosto' && dan == 'pet'">
+                    <strong>{{urnik['pet'][i]}}</strong>
+                </a>
+            </td>
+        </tr>
+</table>
+</div>
+
+
+
